# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "consensus"
version = "1.0.0-alpha"
authors = ["Karim Agha <karim.agha@gnosis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#dev = { path = "./../dev/" }
#aura = { path = "./aura/" }
#clique = { path = "./clique/" }
#ethash = { path = "./ethash/" }
