# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "core"
version = "1.0.0-alpha"
authors = ["Karim Agha <karim.agha@gnosis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# uint = "0.9"
# fixed-hash = "0.7"
ethereum-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-rlp = "0.1"
