# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reth-interfaces"
version = "0.0.1"
edition = "2018"

[features]
test_only = []
default = []

[dependencies]
reth-core ={ path = "../core", package="reth-core" }
async-trait = "0.1"
ethereum-forkid = "0.5"
futures = "0.3"
anyhow = "1.0"
rlp = "0.5"
parking_lot = "0.11"


[dev-dependencies]
reth-core ={ path = "../core", package="reth-core", features=["test_only"]}
