# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "serde-rlp"
version = "0.1.0"
authors = ["karim <karim.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlp = "0.5.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hex-literal = "0.3.1"
ethereum-types = "0.11.0"