# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reth-test"
version = "1.0.0-alpha"
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core ={ path = "../core", package="reth-core" }
