# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reth-txpool"
version = "1.0.0-alpha"
authors = ["Gnosis developers <developers@gnosis.io>"]
edition = "2018"

[dependencies]
core = { path = "../core", package="reth-core", default-features = false }


[dev-dependencies]
core = { path = "../core", package="reth-core", features=["test_only"]}


