# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reth-util"
version = "0.1.0"
license = "Apache-2.0"
description = "Utility library made for ethereum blockchain client."
authors = ["draganrakita <dragan.rakita@gnosis.io>"]
readme = "README.md"
homepage = ""
edition = "2018"